Estructuras de Control

--- a/JS/index.html
+++ b/JS/index.html
@@ -12,10 +12,6 @@
 
 <script>
 
-   
-   
- 
-
     const  fechaNacimiento = "14 marzo 1991";
 
     console.log(fechaNacimiento)
@@ -103,6 +99,22 @@
     datos= [1,true,"Hola !!"]
 
     datos.map((elemento)=>console.log(elemento))
+
+
+    datos = "1234.15"
+    datos = Number(datos)
+    datos = datos + 1000 
+    datos = datos.toString() 
+    datos = "Mi valor es : $"+ datos+" esta pesos colombianos"
+
+    //datos = Date()
+    ///datos = Date.now()
+    
+
+    console.log("cuantos valores existen en la variable datos = ", datos)
+
+    console.log("tipo de dato de la variable datos = ", typeof datos)
+
 
 </script>
 
