Ejemplo HTML - CSS

--- a/html/ExampleStyles.html
+++ b/html/ExampleStyles.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo de html</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="abc.css">
     <style>
         button{
             color: blue;
@@ -31,6 +32,14 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ullam, amet, corporis sapiente autem magnam beatae numquam eum sequi eaque dolorum cupiditate repellendus in. Dolor earum tempora eos quos perferendis.
         </p>
         <button id="mainButton">Mi Primer boton</button>
+        <button >Mi Primer boton</button>
+        <button >Mi Primer boton</button>
+        <button >Mi Primer boton</button>
+        <button >Mi Primer boton</button>
+        <button >Mi Primer boton</button>
+        <button >Mi Primer boton</button>
+        <button >Mi Primer boton</button>
+        <button >Mi Primer boton</button>
 
         
 
@@ -93,8 +102,5 @@
 
     </div>
    
-    
-
-
 </body>
 </html>
