Ejemplo Implementación Libreria

--- a/implemetacionLibreria/index.html
+++ b/implemetacionLibreria/index.html
@@ -32,6 +32,10 @@
                             <label for="password">Contraseña</label>
                           </div>
                       </div>
+                      <div class="progress">
+                        <div class="indeterminate"></div>
+                    </div>
+                          
                       <button class="btn waves-effect waves-light" type="submit" name="action">Iniciar Sesión
                         <i class="material-icons right">send</i>
                       </button>
