--- a/implemetacionLibreria/index.html
+++ b/implemetacionLibreria/index.html
@@ -32,11 +32,11 @@
                             <label for="password">Contraseña</label>
                           </div>
                       </div>
-                      <div class="progress">
-                        <div class="indeterminate"></div>
+                      <div class="progress  brown darken-1">
+                        <div class="indeterminate deep-orange darken-3"></div>
                     </div>
                           
-                      <button class="btn waves-effect waves-light" type="submit" name="action">Iniciar Sesión
+                      <button class="btn waves-effect waves-light  purple lighten-4" type="submit" name="action">Iniciar Sesión
                         <i class="material-icons right">send</i>
                       </button>
                     </form>
